<resources>
    <string name="app_name">Crown Properties</string>

    <!--
        Following Comments Are For Main Parts Of The App
-->
    <string name="agentText">Agent</string>
    <string name="availabletext">Available</string>
    <string name="phone_agent">Phone</string>
    <string name="contact_agent">Contact Agent</string>
    <string name="list_view">Open House List View</string>
    <string name="my_profile">My Profile</string>
    <string name="tap_image">Tap Image To Upload Another</string>
    <string name="type_5">Search Everything Else</string>
    <string name="name">Name </string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="working">Working</string>
    <string name="destination">Destination</string>
    <string name="picked_customer">Picked customer</string>
    <string name="car">Car</string>
    <string name="balance">Balance</string>
    <string name="powered_by">Powered By Justin Wozniak</string>
    <string name="distance">Distance</string>
    <string name="date">Date</string>
    <string name="email">Email</string>
    <string name="password">Password (6 Characters Long)</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="customer">Customer</string>
    <string name="agent">Agent</string>
    <string name="getting_agent">Getting Your Agent ....</string>
    <string name="looking_agent">Looking For Your Agent…</string>
    <string name="agent_here">Agent Here</string>
    <string name="agent_found">Agent Found</string>
    <string name="agent_complete">Agent Completed</string>
    <string name="not_approved">Your Account Has Not Been Approved</string>
    <string name="no_agent_near_you">No agents have been found near you</string>
    <string name="is_a_favorite">Added To Favorites!</string>
    <string name="is_not_a_favorite">Removed From Favorites!</string>
    <string name="favorites">My Favorite Properties</string>
    <string name="agent_profile_picture">Agents Profile Picture</string>
    <string name="find_closest_agent">I agree, Find Closest Agent!</string>
    <string name="agents_name">Agents Name</string>
    <string name="agents_location">Agents Location</string>
    <string name="accept">Accept, Start Chat</string>
    <string name="decline">Decine</string>
    <string name="customer_asking">A Customer Would Like to Contact You</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="chat">Crown Properties Chat</string>

    <string name="title_activity_agent_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="account_array">
        <item>Customer</item>
        <item>Driver</item>
    </string-array>
    <string name="title_activity_map">MapActivity</string>


    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyABYxmjHLFxd6wGpl4_7whOrpCbVpIIVs8</string>


    <string name="action_example">Example action</string>

    <string name="waiting_for_location">Waiting for Location</string>


    <string name="find_an_agent_description">
    Clicking the button below you agree to let Crown Properties use your
        location and our state of the art algorithm to find you a
        Real Estate Agent that\'s ready to help you find your dream home!
    </string>

    <!--
                The following Strings are for Recycler View
    -->
    <string name="title_placeholder">Title</string>
    <string name="info_placeholder">Information</string>
    <string name="property_info_placeholder">Here is some information</string>
    <string name="empty_screen">We do not have anything\nhere right now. Please Retry</string>
    <string name="btn_retry">Retry</string>
    <string name="title_property_list">My Favorite Properties</string>
    <string name="title_property_detail">Property Detail</string>
    <string name="title_favorite_list">Favorites</string>
    <string name="title_favorite_detail">Favorite Detail</string>
    <string name="find_an_agent">Find an Agent</string>
    <string name="title_favoriteproperty_list">FavoriteProperties</string>
    <string name="title_favoriteproperty_detail">FavoriteProperty Detail</string>
    <string name="title_activity_find_agents">FindAgents</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>
