<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="251dp"
        android:layout_height="213dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="5sp"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="5sp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:drawablePadding="5sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/black">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black">

    </com.google.android.material.textfield.TextInputLayout>

    <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/radioRealButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:background="@color/grey"
        android:elevation="2dp"
        app:borderColor="@color/quantum_white_100"
        app:borderWidth="1dp"
        app:divider="@color/quantum_white_100"
        app:dividerPadding="10dp"
        app:dividerWidth="1dp"
        app:position="0"
        app:radius="30dp"
        app:ripple="true"
        app:rippleColor="@color/mygold"
        app:selectedBackground="@color/mygold">

        <com.addisonelliott.segmentedbutton.SegmentedButton

            android:layout_width="208dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            app:drawable="@drawable/ic_user_black"
            app:drawableGravity="top"
            app:rippleColor="#B4975A"
            app:selectedTextColor="@color/colorBackground"
            app:text="@string/customer"
            app:textColor="@color/black" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:layout_width="180dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:padding="10dp"
            app:drawable="@drawable/ic_places_local_government_office"
            app:drawableGravity="top"
            app:selectedTextColor="@color/black"
            app:text="@string/agentText"
            app:textColor="@color/white" />
    </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>


    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorBackground"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark" />


</LinearLayout>