<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer.FindAgentsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_find_agents" />








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.wozzytheprogrammer.kwproperty.Customer.CustomerProfileActivity"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_find_agent_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mygold"
            android:elevation="4dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="451dp"
            android:orientation="vertical"
            android:padding="20sp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/agent_profile_picture" />

            <ImageView
                android:id="@+id/find_agent_profileImage"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginBottom="20sp"
                android:src="@mipmap/ic_default_user" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/agents_name" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/agents_location" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/find_an_agent_description"
                android:textAlignment="center"
                android:textSize="29sp"
                android:textStyle="bold" />


        </LinearLayout>

        <Button
            android:id="@+id/find_agent_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/black"
            android:padding="20sp"
            android:text="@string/find_closest_agent"
            android:textColor="@android:color/white" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>