<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:id="@+id/textView8"
            android:layout_width="325dp"
            android:layout_height="74dp"
            android:layout_marginTop="41dp"
            android:layout_marginBottom="112dp"
            android:gravity="center"
            android:text="@string/customer_asking"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:layout_width="361dp"
            android:layout_height="25dp"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:text="The address will go here"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/accept_chat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="34dp"
            android:background="@color/black"
            android:padding="10sp"
            android:text="@string/accept"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/decline_chat_button"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/decline_chat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="77dp"
            android:layout_marginBottom="34dp"
            android:background="@color/white"
            android:text="@string/decline"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/accept_chat_button"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>