<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_margin="@dimen/_4dp"
    app:ignore="NamespaceTypo">

    <androidx.cardview.widget.CardView
        android:id="@+id/fav_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:background="@color/black"
        android:padding="@dimen/card_view_margin"
        card_view:cardCornerRadius="@dimen/card_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">


            <ImageView
                android:id="@+id/fav_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="9dp"
                android:background="@drawable/logo"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/fav_title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/thumbnail"
                android:layout_alignParentStart="true"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:drawable/screen_background_dark"
                android:gravity="center"
                android:padding="@dimen/_8dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:text="@string/title_placeholder"
                android:textAlignment="center"
                android:textColor="@color/places_text_white_alpha_87"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fav_newsTitle"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_below="@+id/thumbnail"
                android:layout_alignParentStart="true"
                android:layout_marginStart="177dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:gravity="center"
                android:padding="@dimen/_8dp"
                android:paddingTop="20dp"
                android:text="@string/info_placeholder"
                android:textAlignment="center"
                android:textColor="@color/mygold"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fav_newsInfo"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fav_newsTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginTop="132dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:padding="@dimen/_8dp"
                android:text="@string/property_info_placeholder"
                android:textAlignment="center"
                android:textColor="@color/mygold"
                android:textSize="32sp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/fav_call_agent_button"
                android:layout_width="85dp"
                android:layout_height="68dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="105dp"
                android:layout_marginEnd="27dp"
                android:background="@android:drawable/screen_background_dark"
                android:checked="false"
                android:text="@string/contact_agent"
                android:textColor="@color/quantum_pinkA400"
                android:textOff="@string/contact_agent"
                android:textOn="@string/contact_agent"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/favidTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="76dp"
                android:visibility="gone"
                android:text="TextView" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
